# bfbuffer_lib

./: CMakeLists.txt  README.md
src/main/private/: buffer.cpp
src/main/public/: buffer.hpp
src/test/: buffer_test.cpp
